--- a/contact-me.html
+++ b/contact-me.html
@@ -20,6 +20,8 @@
       <input type="email" name="yourEmail" id=""><br>
       <label for="">Your Message:</label><br>
       <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
+      <label for="myFile">Upload your queries: </label>
+      <input type="file" id="myFile" name="queries"/><br>
       <input type="submit" />
     </form>
   </body>
