--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
 <body>
     <h3>Hobbies</h3>
     <ol>
-        <li>Beer brewing</li>
+        <li>reading physics books</li>
         <li>Motorcycles</li>
         <li>Martial arts</li>
     </ol>
